syntax = "proto3";

package randomPackage;

service Random {
    rpc PingPong(PingRequest) returns (PongResponse) {};
    rpc RandomNumber(NumberRequest) returns (stream NumberResponse) {};
    // rpc RandomNumbers(NumberRequest) returns (stream NumberResponse) {};
    // rpc TodoList(stream TodoRequest) returns (TodoResponse) {};
    // rpc Chat(stream ChatRequest) returns (stream ChatResponse) {};
  }
  
  message PingRequest {
    string message = 1;
  }
  
  message PongResponse {
    string message = 1;
  }

  message NumberRequest{
    int32 maxVal = 1;
  }
  message NumberResponse{
    int32 num =1;
  }